# pycodec2-202310

./: .envrc  .gitignore  DEV.md  Pipfile  README.md  lefthook.yml  pyproject.toml  setup.py
.github/workflows/: build.yml
