# This file is necessary for the build system as it specifies the build-time
# dependencies.
# You need to keep it in sync with development dependencies specified in
# Pipfile.
[build-system]
requires = ["Cython==3.*", "numpy==1.26.*", "setuptools"]
# Required table with required fields: https://peps.python.org/pep-0621/#table-name.
[project]
name = "pycodec2"
version = "2.1.0"
description = "A Cython wrapper for codec2"
readme = "README.md"
# Necessary for cibuildwheel not to use an old python that may have old
# libraries. E.g., python 3.6 does not have numpy 1.26.
# https://cibuildwheel.readthedocs.io/en/stable/options/#requires-python
#
# Using at least Python 3.9, because as of 2023-09, 3.8 is outdated.
requires-python = ">=3.9"
authors = ["Grzegorz Milka <grzegorzmilka@gmail.com>"]
